스트리밍 채팅 API 제거 및 채팅 요청 처리 로직 리팩터링
- '/stream' 엔드포인트 관련 코드 주석 처리.
- 'gemini.api.stream-url' 구성 제거 및 관련 코드는 더 이상 사용되지 않음.
- 요청 변환 로직에 'safetySettings' 및 'generationConfig'를 추가해 응답 생성 개선.
- 오류 시 기본 응답 메시지를 추가하고 로그를 통해 디버그 지원 강화.